Added comments, filled tables with dummy info

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,7 @@
 /* BEGIN FOOTER */
 .footer {
     /* Positioning */
+    /*NAVEE AND DANIEL, THIS MAY NEED TO GO*/
     position: absolute;
    
     
