--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,6 @@
+
+
+
 .jumbotron {
     background-color: #56b2a9;
 }
@@ -5,6 +8,20 @@
 .jumbotron jumbotron-fluid {
   margin: 0px;
   padding: 0px;
+}
+
+#Logo {
+
+ width: 25%;
+ height: 25%;
+ padding-bottom: 50px;
+
+}
+
+#jumbo-text.h2.text-center {
+
+padding-bottom: 30px;
+
 }
 
 #pg2 {
