adding new text to 'section 2'

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -104,6 +104,10 @@ padding: 10px;
   font-size: 30px;
 }
 
+#mainIngr {
+  font-family: 'Special Elite', cursive;
+}
+
 #boozeID {
   font-family: 'Special Elite', cursive;
 }
