--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,6 +41,11 @@ text-align: center;
 padding: 10px;
 }
 
+#form-button {
+  text-align: center;
+  padding: 10px;
+  }
+
 #button-addon3 {
     margin-top: 50px;
     margin-bottom: 50px;
