--- a/public/css/style.css
+++ b/public/css/style.css
@@ -258,6 +258,29 @@ padding: 10px;
 #button-addon3 {
     margin-top: 50px;
     margin-bottom: 50px;
+    background-color: hsl(36, 100%, 22%) !important;
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#12654d", endColorstr="#0c2115");
+    background-image: -khtml-gradient(linear, left top, left bott0om, from(#12654d), to(#0c2115));
+    background-image: -moz-linear-gradient(top, #12654d, #0c2115);
+    background-image: -ms-linear-gradient(top, #12654d, #0c2115);
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #12654d), color-stop(100%, #0c2115));
+    background-image: -webkit-linear-gradient(top, #12654d, #0c2115);
+    background-image: -o-linear-gradient(top, #12654d, #0c2115);
+    background-image: linear-gradient(#12654d, #0c2115);
+    border-color: #704300 #704300 hsl(36, 100%, 17%);
+    color: #fff !important;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.33);
+    -webkit-font-smoothing: antialiased;
+    -moz-box-shadow: 0px 0px 10px 2px #12654d;
+    -webkit-box-shadow: 0px 0px 10px 2px #12654d;
+    box-shadow: 0px 0px 10px 2px #12654d;
+    -moz-border-radius:12px;
+    -webkit-border-radius:12px;
+    border-radius:12px;
+    border:6px solid #0c3d2e;
+    display:inline-block;
+    cursor:pointer;
     
 }
 
