--- a/public/css/style.css
+++ b/public/css/style.css
@@ -332,45 +332,6 @@ padding: 10px;
   color: white;
 }
 
-/* BEGIN FOOTER */
-.footer {
-    /* Positioning */
-    /*NAVEE AND DANIEL, THIS MAY NEED TO GO*/
-    position: fixed;
-   
-    
-    /* Box-model */
-    width: 100%;
-    height: 60px;
-    bottom: 0;
-    /* Visual */
-    background-color: #666;
-  }
-  
-  .text-muted-footer {
-    /* Box-model */
-    margin-top: 15px;
-  
-    /* Typography */
-    color: white;
-  }
-  
-  .two-toned-footer-color {
-    /* Box-model */
-    height: 6px;
-    padding-top: 3px;
-    width: 100%;
-  
-    /* Visual */
-    background-color: #4aaaa5;
-  }
-  /* END FOOTER */
-  .footer-block {
-    margin: 20px 0;
-  }
-
-
-
 #drinkName {
   font-family: 'Special Elite', cursive;
   font-size: 30px;
@@ -392,4 +353,18 @@ padding: 10px;
 #instructions {
   font-family: 'Economica', sans-serif;
   font-size: 200%;
+}
+
+body {
+  background-color: #56b2a9;
+  
+}
+
+#formJumbo {
+  text-align: center;
+  font-family: 'Special Elite', cursive;
+}
+
+#formPage {
+  font-family: 'Special Elite', cursive;
 }
